--- a/src/scss/common/common.scss
+++ b/src/scss/common/common.scss
@@ -2,7 +2,7 @@ body {
     background: #360068;
 }
 
-.bg-wraper{
+.bg-wraper {
     background: linear-gradient(135deg, #0f001d 0%, #40007c 100%);
     background-attachment: fixed;
 }
@@ -50,6 +50,16 @@ a {
     &:hover {
         background: linear-gradient(-135deg, #cf0542 0.56%, #da6900 100%);
         color: #fff;
+    }
+}
+
+.action-btn {
+    position: absolute;
+    top: 36%;
+
+    .btn {
+        width: 100%;
+        max-width: 360px;
     }
 }
 
@@ -108,38 +118,45 @@ main {
     position: relative;
     width: 80px;
     height: 80px;
-  }
-  .lds-facebook div {
+}
+
+.lds-facebook div {
     display: inline-block;
     position: absolute;
     left: 8px;
     width: 16px;
     background: #fff;
     animation: lds-facebook 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
-  }
-  .lds-facebook div:nth-child(1) {
+}
+
+.lds-facebook div:nth-child(1) {
     left: 8px;
     animation-delay: -0.24s;
-  }
-  .lds-facebook div:nth-child(2) {
+}
+
+.lds-facebook div:nth-child(2) {
     left: 32px;
     animation-delay: -0.12s;
-  }
-  .lds-facebook div:nth-child(3) {
+}
+
+.lds-facebook div:nth-child(3) {
     left: 56px;
     animation-delay: 0;
-  }
-  @keyframes lds-facebook {
+}
+
+@keyframes lds-facebook {
     0% {
-      top: 8px;
-      height: 64px;
+        top: 8px;
+        height: 64px;
     }
-    50%, 100% {
-      top: 24px;
-      height: 32px;
+
+    50%,
+    100% {
+        top: 24px;
+        height: 32px;
     }
-  }
-  
+}
+
 
 .preloader {
     display: none;
@@ -159,7 +176,7 @@ main {
 
 }
 
-footer{
+footer {
     position: relative;
     z-index: 3;
 }
